--- a/VetApp.csproj
+++ b/VetApp.csproj
@@ -76,6 +76,12 @@
     <Compile Include="frmMascotas.Designer.cs">
       <DependentUpon>frmMascotas.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTurnoPelu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTurnoPelu.Designer.cs">
+      <DependentUpon>frmTurnoPelu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmAppVet.resx">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMascotas.resx">
       <DependentUpon>frmMascotas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTurnoPelu.resx">
+      <DependentUpon>frmTurnoPelu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
