agrega clase Veterinaria serializable
carga datos al inicio y los guarda al salir

--- a/VetApp.csproj
+++ b/VetApp.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Veterinaria.cs" />
     <EmbeddedResource Include="frmAppVet.resx">
       <DependentUpon>frmAppVet.cs</DependentUpon>
     </EmbeddedResource>
