--- a/VetApp.csproj
+++ b/VetApp.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmAppVet.cs">
+    <Compile Include="frmApp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmAppVet.Designer.cs">
-      <DependentUpon>frmAppVet.cs</DependentUpon>
+    <Compile Include="frmApp.Designer.cs">
+      <DependentUpon>frmApp.cs</DependentUpon>
     </Compile>
     <Compile Include="frmClient.cs">
       <SubType>Form</SubType>
@@ -79,8 +79,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Veterinaria.cs" />
-    <EmbeddedResource Include="frmAppVet.resx">
-      <DependentUpon>frmAppVet.cs</DependentUpon>
+    <EmbeddedResource Include="frmApp.resx">
+      <DependentUpon>frmApp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmClient.resx">
       <DependentUpon>frmClient.cs</DependentUpon>
